# RPGMaker

./: CMakeLists.txt  CMakePresets.json
Resources/config/: display_settings.ini  key_binds.settingsState.ini  key_binds_gamestate.ini  key_binds_mainmenustate.ini  supported_keys.ini
Resources/gameState/: warrior sizes.txt
src/: Animation.cpp  Animation.hpp  Enemy.cpp  Enemy.h  Enemy.hpp  Entity.cpp  Entity.h  Game.cpp  Game.h  Game.hpp  GameState.cpp  GameState.h  GameState.hpp  Gui.cpp  Gui.h  Gui.hpp  MainMenuState.cpp  MainMenuState.h  MainMenuState.hpp  MovementComponent.cpp  MovementComponent.h  MovementComponent.hpp  Player.cpp  Player.h  Player.hpp  SettingsState.cpp  SettingsState.h  SettingsState.hpp  State.cpp  State.h  State.hpp  StateData.cpp  StateData.h  StateData.hpp  main.cpp  stdafx.cpp  stdafx.h  stdafx.hpp
src/components/: AnimationComponent.cpp  AnimationComponent.hpp  MovementComponent.cpp  MovementComponent.hpp
src/entities/: Entity.cpp  Entity.hpp  Player.cpp  Player.hpp
src/gui/: DisplaySettingsMenu.cpp  DisplaySettingsMenu.hpp  Gui.cpp  Gui.hpp  Menu.cpp  Menu.hpp  PauseMenu.cpp  PauseMenu.hpp
src/states/: GameState.cpp  GameState.hpp  MainMenuState.cpp  MainMenuState.hpp  SettingsState.cpp  SettingsState.hpp  State.cpp  State.hpp
